[gd_scene load_steps=15 format=3 uid="uid://b75pyl2lng2xs"]

[ext_resource type="Script" path="res://scripts/end_screen.gd" id="1_537bo"]
[ext_resource type="Theme" uid="uid://ckw0dgryqoo2d" path="res://ressources/ui_theme.tres" id="1_fg1kc"]
[ext_resource type="PackedScene" uid="uid://b75oemjfxvwkj" path="res://scenes/volume_slider.tscn" id="2_7p8ro"]
[ext_resource type="Texture2D" uid="uid://dp0bhyslqy8c1" path="res://ressources/textures/end_background.png" id="3_tevsh"]
[ext_resource type="Texture2D" uid="uid://hgklt6jkrbx0" path="res://ressources/textures/flashlight_light.png" id="5_a84fj"]
[ext_resource type="AudioStream" uid="uid://4xoyi18j2isk" path="res://ressources/audio/Adding the Sun.mp3" id="5_gaj7b"]
[ext_resource type="AudioStream" uid="uid://b5udcelwcwbhs" path="res://ressources/audio/bastipictures__rain-against-window.mp3" id="6_g7arn"]
[ext_resource type="AudioStream" uid="uid://7t4s4lwp0qyi" path="res://ressources/audio/onesoundtorulethemall__thunder15.wav" id="7_f38j2"]

[sub_resource type="Gradient" id="Gradient_xkrbe"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jtdkk"]
gradient = SubResource("Gradient_xkrbe")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.4)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="Animation" id="Animation_nv07t"]
resource_name = "lighthouse_light_loop"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lights/PointLight2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.5, 2), Vector2(-2.5, 2)]
}

[sub_resource type="Animation" id="Animation_klekt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lights/PointLight2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_20o74"]
_data = {
"RESET": SubResource("Animation_klekt"),
"lighthouse_light_loop": SubResource("Animation_nv07t")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8ri1l"]
playback_mode = 1
random_pitch = 2.0
random_volume_offset_db = 2.0
streams_count = 1
stream_0/stream = ExtResource("7_f38j2")

[node name="EndScreen" type="Node"]
script = ExtResource("1_537bo")

[node name="Lights" type="Node" parent="."]

[node name="PermanentLight" type="PointLight2D" parent="Lights"]
position = Vector2(755, 189)
rotation = -2.80218
scale = Vector2(1.07251, 1.98701)
texture = SubResource("GradientTexture2D_jtdkk")

[node name="PermanentLight2" type="PointLight2D" parent="Lights"]
position = Vector2(453, 272)
rotation = 0.663831
scale = Vector2(1.16799, 2.18644)
skew = -0.390959
texture = SubResource("GradientTexture2D_jtdkk")

[node name="PermanentLight3" type="PointLight2D" parent="Lights"]
position = Vector2(115, 252)
rotation = 0.54706
scale = Vector2(0.987121, 2.4459)
skew = -0.390959
texture = SubResource("GradientTexture2D_jtdkk")

[node name="PermanentLight4" type="PointLight2D" parent="Lights"]
position = Vector2(941, 251)
texture = SubResource("GradientTexture2D_jtdkk")

[node name="PointLight2D" type="PointLight2D" parent="Lights"]
position = Vector2(941, 253)
scale = Vector2(2.2, 2)
shadow_color = Color(1, 1, 1, 0.654902)
texture = ExtResource("5_a84fj")
offset = Vector2(234, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_20o74")
}
autoplay = "lighthouse_light_loop"

[node name="Darkness" type="CanvasModulate" parent="."]
position = Vector2(945, 253)
color = Color(0.695503, 0.695503, 0.695503, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fg1kc")

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tevsh")

[node name="EndText" type="PanelContainer" parent="Control"]
layout_mode = 2
offset_left = 49.0
offset_top = 34.0
offset_right = 752.0
offset_bottom = 424.0

[node name="MarginContainer" type="MarginContainer" parent="Control/EndText"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Control/EndText/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "Congratulations, you lit the lighouse and vanquished your fear! Now, ships can feel safe and you can go back to bed before your parents gets mad for playing so late at night."
horizontal_alignment = 1
autowrap_mode = 2

[node name="CreditsPanel" type="PanelContainer" parent="Control"]
visible = false
layout_mode = 1
offset_left = 676.0
offset_top = 38.0
offset_right = 1262.0
offset_bottom = 691.0

[node name="MarginContainer2" type="MarginContainer" parent="Control/CreditsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Control/CreditsPanel/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "Code by Cortez & Elginas

Main musics by SamWritesMusic
KevinMcLeod - Adding the sun

Edited tileset dungeon by IncolGames / David G

Player sprite by analogStudios_

Sounds
benjaminnelan door-locked
pagancow dorm-door-opening
pnmcarrierailfan thunder-claps-single-clap-02
onesoundtorulethemall thunder15
bastipictures rain-against-window
sadiquecat flashlight-button-press
FreeSFX Retro - PickUp, Walk, Jump, Swooosh"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 17.0
offset_top = 434.0
offset_right = 650.0
offset_bottom = 706.0
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Start" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play again"

[node name="Credits" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits"

[node name="Exit" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[node name="Volume manager" type="PanelContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/Volume manager"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/Volume manager/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Master" type="Label" parent="Control/HBoxContainer/Volume manager/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Master"

[node name="volume_slider" parent="Control/HBoxContainer/Volume manager/MarginContainer/VBoxContainer" instance=ExtResource("2_7p8ro")]
layout_mode = 2
bus_name = "Master"

[node name="Music" type="Label" parent="Control/HBoxContainer/Volume manager/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Music"

[node name="volume_slider3" parent="Control/HBoxContainer/Volume manager/MarginContainer/VBoxContainer" instance=ExtResource("2_7p8ro")]
layout_mode = 2
bus_name = "Music"

[node name="Sounds" type="Label" parent="Control/HBoxContainer/Volume manager/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Sounds"

[node name="volume_slider2" parent="Control/HBoxContainer/Volume manager/MarginContainer/VBoxContainer" instance=ExtResource("2_7p8ro")]
layout_mode = 2
bus_name = "Sounds"

[node name="VictoryMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_gaj7b")
volume_db = 2.0
autoplay = true
bus = &"Music"

[node name="Rain" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_g7arn")
volume_db = -6.0
autoplay = true
bus = &"Sounds"

[node name="ThunderTimer" type="Timer" parent="."]
one_shot = true

[node name="ThunderSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_8ri1l")
bus = &"Sounds"

[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
